--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
+.vscode
 .env
-node_modules/
+/node_modules
+/.pnp
+/coverage
+/build
+/dist
+.pnp.js
 .DS_Store
-dist/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
 *.code-workspace
