--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "epicodus-webkit-template",
+  "name": "epi-portland-places",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "build": "webpack --mode development; cp dist/index.html ./; cp dist/bundle.js ./",
     "start": "npm run build; webpack-dev-server --open --mode development",
@@ -10,8 +10,8 @@
     "test": "npm run build; jest"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Kent P. McKinney",
+  "license": "",
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
@@ -22,14 +22,14 @@
     "eslint-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "4.39.3",
     "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "jquery": "^3.4.1"
+    "jquery": "^3.5.1"
   }
 }
