--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "4.39.3",
     "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "serialize-javascript": ">=2.1.1"
   },
   "dependencies": {
     "jquery": "^3.5.1"
